# SENTRY

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_CODE_INSTRUCTIONS.md  README.md
backend/: pyproject.toml  requirements.txt
backend/agent/: graph.py  state.py
backend/agent/nodes/: __init__.py  analyzer.py  batch_resolver.py  context_loader.py  data_fetcher.py  intent_classifier.py  response_synthesizer.py
backend/agent/tools/: batch_tools.py  task_tools.py
backend/api/: main.py
backend/config/: domain_rules.py  essentials_map.py
backend/models/: lenz.py
backend/services/: azure_openai.py  db_service.py  lenz_auth.py  lenz_service.py
backend/tests/: test_db_connectivity.py  test_lenz_ntlm_debug.py  test_lenz_service.py  test_tools.py
docs/: api-contracts.md  architecture.md  connectivity.md  data-model.md  implementation-plan.md  lenz-integration.md  query-tier-system.md  ui-design.md  ui-reference.html
frontend/: index.html
frontend/src/: App.css  App.tsx  types.ts
frontend/src/components/: ChatPanel.css  ChatPanel.tsx  EssentialsTable.css  EssentialsTable.tsx  ExpandedRow.css  ExpandedRow.tsx  Header.css  Header.tsx  PageControls.css  PageControls.tsx  StatusBadge.css  StatusBadge.tsx  SummaryCards.css  SummaryCards.tsx
frontend/src/data/: mockEssentials.ts
frontend/src/styles/: global.css
frontend/static/css/: sentry.css
frontend/static/js/: chat.js  dashboard.js  utils.js
frontend/templates/: base.html  dashboard.html
frontend/templates/partials/: chat_panel.html  essentials_table.html  header.html  summary_cards.html
